--- a/styles/navbar.css
+++ b/styles/navbar.css
@@ -29,10 +29,20 @@ nav a {
   align-items: center;
 }
 
+.logo-container {
+  display: flex;
+  justify-content: flex-start;
+  width: 200px;
+  border-right: 1px solid rgb(186, 186, 186);
+}
+#logoNoticias {
+  border: none;
+}
 #logoNoticias img {
   height: auto;
   width: 100px;
   padding-top: 2px;
+  border-right: 0;
 }
 
 #nav-sign-in {
@@ -58,6 +68,36 @@ nav a {
   left: 0;
   width: 100%;
   height: 5px;
+}
+#nav-bell-icon {
+  height: 100%;
+}
+
+#nav-bell-icon i {
+  padding: 0 15px;
+}
+
+/* MAIN NAV */
+#main-nav {
+  display: flex;
+  height: 100%;
+}
+
+.main-nav-entry {
+  height: 100%;
+  padding: 0 25px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+#nav-search {
+  height: 100%;
+  padding-right: 15px;
+  margin-right: 15px;
+}
+#nav-search i {
+  padding: 0 10px 0 15px;
 }
 
 /*All the different colours that the underline can be*/
